# autopi-ha

./: .codacy.yaml  .devcontainer.json  .editorconfig  .gitignore  .pre-commit-config.yaml  .release-please-config.json  .safety-project.ini  .secrets.baseline  API calls analysis 2.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  autopi-api-combined.md  hacs.json  mkdocs.yml  package.json  pyproject.toml  renovate.json  todo.txt  todos.txt  wrangler.toml  zensical.toml
.github/: issue-labeler.yml  labeler.yml
.github/workflows/: bandit.yml  codeql.yml  dependabot-prs.yml  dependency-review.yml  generate-release-notes.yml  issue-triage.yml  manual-changelog-update.yml  release-please.yml  scorecard.yml  scorecards.yml  summary.yml  tests.yml  trigger-docs-sync.yml  update-version.yml  zizmor.yml
custom_components/autopi/: CLAUDE.md  __init__.py  auto_zero.py  binary_sensor.py  client.py  config_flow.py  const.py  coordinator.py  data_field_sensors.py  device_tracker.py  event.py  exceptions.py  manifest.json  position_sensors.py  sensor.py  strings.json  types.py
custom_components/autopi/entities/: CLAUDE.md  __init__.py  base.py
custom_components/autopi/translations/: en.json
docs/: .meta.yml  404.md  api-optimization.md  auto-zero-metrics.md  changelog.md  configuration.md  contributing.md  debug-auto-zero.md  development.md  entities.md  faq.md  getting-started.md  index.md  installation.md  naming-conventions.md  robots.txt  vehicle-data.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mathjax.js  seo.js
docs/stylesheets/: extra.css
scripts/: fetch_all_events.py  generate_docs.py  setup
tests/: .gitignore  __init__.py  conftest.py  test_alerts.py  test_api_tracking.py  test_binary_sensor_new.py  test_client.py  test_config_flow.py  test_coordinator.py  test_data_field_sensors.py  test_device_tracker.py  test_events.py  test_init.py  test_options_flow.py  test_position_sensors.py  test_sensor_new.py  test_trip_parsing.py  test_trips.py
tests/fixtures/: fleet_alerts_response.json  position_response.json  trips_response.json  vehicle_profile_response.json
